add new decision type, add new shout via lifestyle perks, add localization on intro events

--- a/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
@@ -19,3 +19,8 @@
  kyne_peace_two_perk_name:0 "Drem"
  kyne_peace_three_perk_name:0 "Ov"
  #animal_allegiance_perk_effect: "FUS"
+
+ whirlwind_sprint_perk_name:0 "Wuld"
+ whirlwind_sprint_two_perk_name:0 "Nah"
+ whirlwind_sprint_three_perk_name:0 "Kest"
+ #animal_allegiance_perk_effect: "FUS"
