remove animal allegiance, add clear skies, add new travel options  and localization

--- a/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
@@ -7,20 +7,23 @@
  unrelenting_force_perk_name:0 "Fus"
  unrelenting_force_two_perk_name:0 "Ro"
  unrelenting_force_three_perk_name:0 "Dah"
- UNRELENTING_FORCE_PERK_EFFECT: "Enables a new siege command."
+ UNRELENTING_FORCE_PERK_EFFECT: "Enables a new siege event\nUnlocks the #high $unrelenting_force_decision_title$#! [decision|E]."
  UNRELENTING_FORCE_TWO_PERK_EFFECT: "Can only be picked if the word "RO" was learned thru visitation. Enables a new siege command."
-
- animal_allegiance_perk_name:0 "Raan"
- animal_allegiance_two_perk_name:0 "Mir"
- animal_allegiance_three_perk_name:0 "Tah"
- #animal_allegiance_perk_effect: "FUS"
 
  kyne_peace_perk_name:0 "Kaan"
  kyne_peace_two_perk_name:0 "Drem"
  kyne_peace_three_perk_name:0 "Ov"
- #animal_allegiance_perk_effect: "FUS"
+ #kyne_peace_perk_effect: "FUS"
+
+ clear_skies_perk_name:0 "Lok"
+ clear_skies_two_perk_name:0 "Vah"
+ clear_skies_three_perk_name:0 "Koor"
+ #CLEAR_SKIES_PERK_EFFECT: "Enables the #high $lok_option$#! [travel_option|E]."
+ CLEAR_SKIES_PERK_EFFECT: "Unlocks the [GetTravelOption('lok_option').GetName] [travel_option|E]"
+ CLEAR_SKIES_TWO_PERK_EFFECT: "Unlocks the [GetTravelOption('lokvah_option').GetName] [travel_option|E]"
+ CLEAR_SKIES_THREE_PERK_EFFECT: "Unlocks the [GetTravelOption('lokvahkoor_option').GetName] [travel_option|E]"
 
  whirlwind_sprint_perk_name:0 "Wuld"
  whirlwind_sprint_two_perk_name:0 "Nah"
  whirlwind_sprint_three_perk_name:0 "Kest"
- #animal_allegiance_perk_effect: "FUS"
+ #kyne_peace_perk_effect: "FUS"
