add new localization for lifestyle perks

--- a/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
@@ -2,8 +2,8 @@
  # Tongue Lifestyle
  decision_group_type_thuum_decisions: "Thuum Decisions"
 
- unrelenting_force_decision_title: "Use 'Fus Ro Dah' While in an Army"
- unrelenting_force_decision_desc: "You narrow your eyes and feel the old words stirring in your chest — Fus... Ro... Dah. The power thrums in your throat, begging to be unleashed.\n\nWhether to intimidate, defend, or simply make an entrance, the decision is yours. The walls may crack, the people may scatter — but your Thu'um will be heard."
+ unrelenting_force_decision_title: "Use 'Unrelenting Force' While in an Army"
+ unrelenting_force_decision_desc: "You narrow your eyes and feel the old words stirring in your chest. The power thrums in your throat, begging to be unleashed.\n\nWhether to intimidate, defend, or simply make an entrance, the decision is yours. The walls may crack, the people may scatter — but your Thu'um will be heard."
  unrelenting_force_decision_effect_tt: "You use 'Fus Ro Dah' to shatter the fort walls at your army's position."
 
  become_tongue_decision_title: "Visit the Priest of Kyne in Gildergreen"
