--- a/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
@@ -4,16 +4,20 @@
  thuum_lifestyle_desc:0 "Thu'um Lifestyle Description"
  zzz_thuum_shouts_name:0 "Words of Power"
 
- unrelenting_force_perk_name:0 "Fus"
- unrelenting_force_two_perk_name:0 "Ro"
- unrelenting_force_three_perk_name:0 "Dah"
- UNRELENTING_FORCE_PERK_EFFECT: "Enables a new siege event\nUnlocks the #high $unrelenting_force_decision_title$#! [decision|E]."
- UNRELENTING_FORCE_TWO_PERK_EFFECT: "Can only be picked if the word "RO" was learned thru visitation. Enables a new siege command."
+ unrelenting_force_perk_name: "Fus"
+ unrelenting_force_two_perk_name: "Ro"
+ unrelenting_force_three_perk_name: "Dah"
+ UNRELENTING_FORCE_PERK_EFFECT_A: "Unlocks an option to use "Fus" when sieging a holding."
+ UNRELENTING_FORCE_PERK_EFFECT_B: "Unlocks the #high $unrelenting_force_decision_title$#! [decision|E]."
+ UNRELENTING_FORCE_PERK_TWO_EFFECT_A: "Unlocks an option to use "Fus Ro" when sieging a holding."
+ UNRELENTING_FORCE_PERK_THREE_EFFECT_A: "Unlocks an option to use "Fus Ro Dah" when sieging a holding."
 
  kyne_peace_perk_name:0 "Kaan"
  kyne_peace_two_perk_name:0 "Drem"
  kyne_peace_three_perk_name:0 "Ov"
- #kyne_peace_perk_effect: "FUS"
+ KYNE_PEACE_PERK_EFFECT_A: "Unlocks an option to use "Kaan" for animal attack events."
+ KYNE_PEACE_PERK_TWO_EFFECT_A: "Unlocks an option to use "Kaan Drem" for animal attack events."
+ KYNE_PEACE_PERK_THREE_EFFECT_A: "Unlocks an option to use "Kaan Drem Ov" for animal attack events."
 
  clear_skies_perk_name:0 "Lok"
  clear_skies_two_perk_name:0 "Vah"
@@ -26,4 +30,6 @@
  whirlwind_sprint_perk_name:0 "Wuld"
  whirlwind_sprint_two_perk_name:0 "Nah"
  whirlwind_sprint_three_perk_name:0 "Kest"
- #kyne_peace_perk_effect: "FUS"
+ WHIRLWIND_SPRINT_PERK_EFFECT: "Unlocks the [GetTravelOption('wuld_option').GetName] [travel_option|E]"
+ WHIRLWIND_SPRINT_TWO_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldna_option').GetName] [travel_option|E]"
+ WHIRLWIND_SPRINT_THREE_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldnakest_option').GetName] [travel_option|E]"
