--- a/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
@@ -9,3 +9,7 @@
  become_tongue_decision_title: "Visit the Priest of Kyne in Gildergreen"
  become_tongue_decision_desc: "After a long day at court, a courtier excitedly tells me of a northern power said to shatter fortresses, calm beasts, and command the skies with just one's voice.\n\nIntrigued, I consider seeking out the priests of Kyne in Gildergreen to learn this power for myself."
  become_tongue_decision_effect_tt: "You travel to Gildergreen in Whiterun to inquire about the Voice."
+
+ thuum_meditation_decision_title: "Meditate to Your Thu'um"
+ thuum_meditation_decision_desc: "You sit in stillness, the world around you fading as you turn inward. Deep within, you seek the ancient resonance of the Voice, ready to attune yourself to its timeless power."
+ thuum_meditation_decision_effect_tt: "You meditate to your thu'um which might gain you experience."
