--- a/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
@@ -10,6 +10,10 @@
  become_tongue_decision_desc: "After a long day at court, a courtier excitedly tells me of a northern power said to shatter fortresses, calm beasts, and command the skies with just one's voice.\n\nIntrigued, I consider seeking out the priests of Kyne in Gildergreen to learn this power for myself."
  become_tongue_decision_effect_tt: "You travel to Gildergreen in Whiterun to inquire about the Voice."
 
+ kyne_peace_decision_title: "Use 'Kyne's Peace' and Find a Potential Pet"
+ kyne_peace_decision_desc: "You steady your breath, calling upon Kyne's ancient gift to soothe the wild.\n\nAs the words form on your lips, you hope a gentle creature will answer — perhaps a companion destined to walk beside you."
+ kyne_peace_decision_effect_tt: "You use 'Kaan Drem Ov' to find a potential pet."
+
  thuum_meditation_decision_title: "Meditate to Your Thu'um"
  thuum_meditation_decision_desc: "You sit in stillness, the world around you fading as you turn inward. Deep within, you seek the ancient resonance of the Voice, ready to attune yourself to its timeless power."
  thuum_meditation_decision_effect_tt: "You meditate to your thu'um which might gain you experience."
