--- a/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
@@ -18,8 +18,8 @@
  thuum_meditation_decision_desc: "You sit in stillness, the world around you fading as you turn inward. Deep within, you seek the ancient resonance of the Voice, ready to attune yourself to its timeless power."
  thuum_meditation_decision_effect_tt: "You meditate to your thu'um which might gain you experience."
 
- resume_learning_thuum_title:  "Resume Learning a Word of Power from a Word Wall"
- fund_learning_thuum_decision_desc: "Need Description, in first person"
+ #resume_learning_thuum_title:  "Resume Learning a Word of Power from a Word Wall"
+ fund_learning_thuum_decision_desc: "There are more Words of Power out there, lost in the world. Perhaps I can enlist loyal agents to seek them out for me."
  fund_learning_thuum_decision_effect_tt: "Spend gold to fund an expedition in order to find a Word Wall to learn a new Word of Power."
 
  visit_bleaks_thuum_decision_desc: "Need Description, in first person"
