add word wall rangvald events

--- a/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
@@ -25,8 +25,8 @@
  visit_bleaks_thuum_decision_desc: "Need Description, in first person"
  visit_bleaks_thuum_decision_effect_tt: "Visit Bleak Falls Barrow and meditate to the Word Wall in hopes to learn a new Word of Power."
 
- visit_rangvald_thuum_decision_desc: "Need Description, in first person"
- visit_rangvald_thuum_decision_effect_tt: "Visit Rangvald Ruins and meditate to the Word Wall in hopes to learn a new Word of Power."
+ visit_ragnvald_thuum_decision_desc: "Need Description, in first person"
+ visit_ragnvald_thuum_decision_effect_tt: "Visit Ragnvald Ruins and meditate to the Word Wall in hopes to learn a new Word of Power."
 
  visit_ironbind_thuum_decision_desc: "Need Description, in first person"
  visit_ironbind_thuum_decision_effect_tt: "Visit Ironbind Barrow and meditate to the Word Wall in hopes to learn a new Word of Power."
