--- a/localization/english/lifestyles/zzz_thuum_events_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_events_l_english.yml
@@ -47,6 +47,15 @@
  zzz_thuum_intro.2202.option.b:0 "Ro..."
  zzz_thuum_intro.2202.option.c:0 "Dah..."
 
+ zzz_thuum_intro.2302.desc.a:0 "Several weeks pass as I meditate before the Word Wall. I spend a few hours each day ruminating on the words arrayed before me, hoping to find the word that calls to me so.\n\nOne day, I stop meditating and open my eyes. As though it is illuminated to me, I see the Word of Power I seek as plain as day and reach forward to touch its carved form.\n\nIt speaks itself to me. I whisper it back softly, and as my Voice coalesces I know I have found what I sought"
+ zzz_thuum_intro.2302.desc.b:0 "Several weeks pass as I meditate before the Word Wall. I spend a few hours each day ruminating on the words arrayed before me, hoping to find the word that calls to me so.\n\nOne day, I stop meditating and open my eyes. As though it is illuminated to me, I see the Word of Power I seek as plain as day and reach forward to touch its carved form.\n\nIt speaks itself to me. I whisper it back softly, and as my Voice coalesces I know I have found what I sought"
+ zzz_thuum_intro.2302.desc.c:0 "Several weeks pass as I meditate before the Word Wall. I spend a few hours each day ruminating on the words arrayed before me, hoping to find the word that calls to me so.\n\nOne day, I stop meditating and open my eyes. As though it is illuminated to me, I see the Word of Power I seek as plain as day and reach forward to touch its carved form.\n\nIt speaks itself to me. I whisper it back softly, and as my Voice coalesces I know I have found what I sought"
+
+ zzz_thuum_intro.2302.option.a:0 "Kaan..."
+ zzz_thuum_intro.2302.option.b:0 "Drem..."
+ zzz_thuum_intro.2302.option.c:0 "Ov..."
+
+
  zzz_thuum_intro.2203.desc:0 "Several weeks have passed by and still I am no closer to understanding the Word of Power.\n\nI know it is here. I can feel it. But no matter how hard I have tried, I cannot figure out which word it is.\n\nA soldier from my retinue informs me that our rations have dwindled. I can return and try again in due time, but for now we should return home."
  zzz_thuum_intro.2303.desc:0 "Several weeks have passed by and still I am no closer to understanding the Word of Power.\n\nI know it is here. I can feel it. But no matter how hard I have tried, I cannot figure out which word it is.\n\nA soldier from my retinue informs me that our rations have dwindled. I can return and try again in due time, but for now we should return home."
  zzz_thuum_intro.2403.desc:0 "Several weeks have passed by and still I am no closer to understanding the Word of Power.\n\nI know it is here. I can feel it. But no matter how hard I have tried, I cannot figure out which word it is.\n\nA soldier from my retinue informs me that our rations have dwindled. I can return and try again in due time, but for now we should return home."
