Add new description for Thuum learning event to enhance narrative depth and player immersion

--- a/localization/english/lifestyles/zzz_thuum_events_l_english.yml
+++ b/localization/english/lifestyles/zzz_thuum_events_l_english.yml
@@ -76,6 +76,9 @@
  zzz_thuum_intro.2403.desc:0 "Several weeks have passed by and still I am no closer to understanding the Word of Power.\n\nI know it is here. I can feel it. But no matter how hard I have tried, I cannot figure out which word it is.\n\nA soldier from my retinue informs me that our rations have dwindled. I can return and try again in due time, but for now we should return home."
  zzz_thuum_intro.2503.desc:0 "Several weeks have passed by and still I am no closer to understanding the Word of Power.\n\nI know it is here. I can feel it. But no matter how hard I have tried, I cannot figure out which word it is.\n\nA soldier from my retinue informs me that our rations have dwindled. I can return and try again in due time, but for now we should return home."
 
+ zzz_thuum_learn_word.0020.desc:0 "The air is still as I kneel in meditation, the ancient word echoing on my lips—not spoken, but remembered. I feel it resonating in my chest, deeper than breath, older than memory.\n\nSuddenly, the silence breaks—not with sound, but with revelation. A new rhythm pulses beneath the Word, a hidden harmony within the Shout. It's not just a weapon of force, but a language of creation, a key to the very bones of the world.\n\nMy understanding of the Thu'um grows—not just louder, but truer. A new path unfurls before me, a way to shape the world not just with voice, but with will."
+
+
 
  single_combat.0001.unrelenting_force:0 "Try standing your ground against #EMP Unrelenting Force#!!"
 
