--- a/way_of_the_voice/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
+++ b/way_of_the_voice/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
@@ -47,9 +47,9 @@
  DRAGON_ASPECT_TWO_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldna_option').GetName] [travel_option|E]"
  DRAGON_ASPECT_THREE_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldnakest_option').GetName] [travel_option|E]"
 
- aura_whisper_perk_name:0 "Laas"
- aura_whisper_two_perk_name:0 "Yah"
- aura_whisper_three_perk_name:0 "Nir"
+ dismay_perk_name:0 "Laas"
+ dismay_two_perk_name:0 "Yah"
+ dismay_three_perk_name:0 "Nir"
  AURA_WHISPER_PERK_EFFECT: "Unlocks the [GetTravelOption('wuld_option').GetName] [travel_option|E]"
  AURA_WHISPER_TWO_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldna_option').GetName] [travel_option|E]"
  AURA_WHISPER_THREE_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldnakest_option').GetName] [travel_option|E]"
