Rename 'aura whisper' decision and localization to 'dismay' for consistency

--- a/way_of_the_voice/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
+++ b/way_of_the_voice/localization/english/lifestyles/zzz_thuum_perks_l_english.yml
@@ -43,20 +43,20 @@
  dragon_aspect_perk_name:0 "Mul"
  dragon_aspect_two_perk_name:0 "Qua"
  dragon_aspect_three_perk_name:0 "Div"
- DRAGON_ASPECT_PERK_EFFECT: "Unlocks the [GetTravelOption('wuld_option').GetName] [travel_option|E]"
- DRAGON_ASPECT_TWO_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldna_option').GetName] [travel_option|E]"
- DRAGON_ASPECT_THREE_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldnakest_option').GetName] [travel_option|E]"
+ DRAGON_ASPECT_PERK_EFFECT: "Unlocks the #high $dragon_aspect_decision_title$#! [decision|E]."
+ DRAGON_ASPECT_TWO_PERK_EFFECT: "Unlocks the #high $dragon_aspect_decision_title$#! [decision|E]."
+ DRAGON_ASPECT_THREE_PERK_EFFECT: "Unlocks the #high $dragon_aspect_decision_title$#! [decision|E]."
 
- dismay_perk_name:0 "Laas"
- dismay_two_perk_name:0 "Yah"
- dismay_three_perk_name:0 "Nir"
- DISMAY_PERK_EFFECT: "Unlocks the [GetTravelOption('wuld_option').GetName] [travel_option|E]"
- DISMAY_TWO_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldna_option').GetName] [travel_option|E]"
- DISMAY_THREE_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldnakest_option').GetName] [travel_option|E]"
+ dismay_perk_name:0 "Faas"
+ dismay_two_perk_name:0 "Ru"
+ dismay_three_perk_name:0 "Maar"
+ DISMAY_PERK_EFFECT: "Unlocks the #high $dismay_decision_title$#! [decision|E]."
+ DISMAY_TWO_PERK_EFFECT: "Unlocks the #high $dismay_decision_title$#! [decision|E]."
+ DISMAY_THREE_PERK_EFFECT: "Unlocks the #high $dismay_decision_title$#! [decision|E]."
 
  battle_fury_perk_name:0 "Mid"
  battle_fury_two_perk_name:0 "Vur"
  battle_fury_three_perk_name:0 "Shaan"
- BATTLE_FURY_PERK_EFFECT: "Unlocks the [GetTravelOption('wuld_option').GetName] [travel_option|E]"
- BATTLE_FURY_TWO_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldna_option').GetName] [travel_option|E]"
- BATTLE_FURY_THREE_PERK_EFFECT: "Unlocks the [GetTravelOption('wuldnakest_option').GetName] [travel_option|E]"
+ BATTLE_FURY_PERK_EFFECT: "Unlocks the #high $battle_fury_decision_title$#! [decision|E]."
+ BATTLE_FURY_TWO_PERK_EFFECT: "Unlocks the #high $battle_fury_decision_title$#! [decision|E]."
+ BATTLE_FURY_THREE_PERK_EFFECT: "Unlocks the #high $battle_fury_decision_title$#! [decision|E]."
