Refactor 'thuum' mechanics: - Introduced new 'Aspect of Dominion' casus belli types for county and duchy conquests, replacing 'Thu'um Meditation' and 'Call of Valor'. - Updated localization for conquest names and descriptions to reflect the new naming convention. - Adjusted decision triggers and effects for 'dismay' to ensure consistency with new mechanics. - Modified perk modifiers related to 'dismay' to enhance gameplay balance. - Implemented new yearly action triggers for 'thuum' traits to improve character interactions.

--- a/way_of_the_voice/localization/english/thuum_options_l_english.yml
+++ b/way_of_the_voice/localization/english/thuum_options_l_english.yml
@@ -10,3 +10,17 @@
  #thuum_siege_modifier_desc: "The Thu'um is raw power, pushing aside anything - or anyone - who stands in your path."
  unstable_thuum_modifier: "Unstable Thuum"
  wrathful_thuum_modifier: "Wrathful Thuum"
+
+ THUUM_CONQUEST_COUNTY_CB_NAME:1 "Aspect of Dominion: Conquer [county|E]"
+ THUUM_CONQUEST_DUCHY_CB_NAME:1 "Aspect of Dominion: Conquer [duchy|E]"
+ THUUM_CONQUEST_CB_SPECIFIC_NAME:1 "Conquer the [TITLE.GetBaseName]"
+ THUUM_CONQUEST_CB_NAME:0 "Conquer the [TITLE.GetBaseName]"
+ THUUM_CONQUEST_WAR_NAME:2 "$ORDER$ [ATTACKER.GetPrimaryTitle.GetAdjective] Conquest of the [TITLE.GetBaseName]"
+ THUUM_CONQUEST_WAR_NAME_BASE:0 "[ATTACKER.GetPrimaryTitle.GetAdjective][DEFENDER.GetPrimaryTitle.GetName]"
+ 
+ thuum_ducal_conquest_cb:0 "Ducal Conquest"
+ THUUM_DUCAL_CONQUEST_CB_NAME:1 "Aspect of Dominion: [ducal_conquest|E] of [county|E]"
+ THUUM_DUCAL_CONQUEST_CB_SPECIFIC_NAME:1 "Ducal Conquest of the [TITLE.GetBaseName]"
+ THUUM_DUCAL_CONQUEST_WAR_NAME:2 "$ORDER$ [ATTACKER.GetPrimaryTitle.GetAdjectiveNoTooltip] Ducal Conquest of the [TITLE.GetBaseNameNoTooltip]"
+ THUUM_DUCAL_CONQUEST_WAR_NAME_BASE:0 "[ATTACKER.GetPrimaryTitle.GetAdjective][DEFENDER.GetPrimaryTitle.GetName]"
+ 
