--- a/way_of_the_voice/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
+++ b/way_of_the_voice/localization/english/lifestyles/zzz_thuum_decisions_l_english.yml
@@ -18,6 +18,14 @@
  thuum_meditation_decision_desc: "You sit in stillness, the world around you fading as you turn inward. Deep within, you seek the ancient resonance of the Voice, ready to attune yourself to its timeless power."
  thuum_meditation_decision_effect_tt: "You meditate to your thu'um which might gain you experience."
 
+ dragon_aspect_decision_title: "Use 'Dragon Aspect' and Feel Your New-found Power"
+ dragon_aspect_decision_desc: "As you steady your breath and think about the words, a fearsome power courses through you, ready to be unleashed."
+
+ dismay_decision_title: "Use 'Dismay' and Hinder Your Enemies"
+ dismay_decision_desc: "You understand that Words of Power can be used to intimidate and frighten. You take a deep breath, feeling the power of the Thu'um within you, and prepare to unleash it upon your enemies, even friends."
+
+ battle_fury_decision_title: "Use 'Battle Fury' and Inspire Your Allies"
+ battle_fury_decision_desc: "You take a deep breath, feeling the power of the Thu'um within you, and prepare to unleash it upon your allies to strengthen and embolden them."
  #resume_learning_thuum_title:  "Resume Learning a Word of Power from a Word Wall"
  fund_learning_thuum_decision_desc: "There are more Words of Power out there, lost in the world. Perhaps I can enlist loyal agents to seek them out for me."
  fund_learning_thuum_decision_effect_tt: "Spend gold to fund an expedition in order to find a Word Wall to learn a new Word of Power."
@@ -34,5 +42,12 @@
  visit_northwind_thuum_decision_desc: "Need Description, in first person"
  visit_northwind_thuum_decision_effect_tt: "Visit Northwind Summit and meditate to the Word Wall in hopes to learn a new Word of Power."
 
+ visit_vahlok_thuum_decision_desc: "Need Description, in first person"
+ visit_vahlok_thuum_decision_effect_tt: "Visit Vahlok's Tomb and meditate to the Word Wall in hopes to learn a new Word of Power."
 
+ visit_volunruud_thuum_decision_desc: "Need Description, in first person"
+ visit_volunruud_thuum_decision_effect_tt: "Visit Volunruud and meditate to the Word Wall in hopes to learn a new Word of Power."
+
+ visit_raven_thuum_decision_desc: "Need Description, in first person"
+ visit_raven_thuum_decision_effect_tt: "Visit Raven Rock Mine and meditate to the Word Wall in hopes to learn a new Word of Power."
 
